Findbugs all over, take 2